<resources>
    <string name="app_name">Snippet</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="search_0">Search Here</string>
    <string name="Settings">Settings</string>
    <string name="about">About US</string>
    <string name="zero">00:00</string>
    <string name="type">Type here ....</string>
    <string name="zeros">00:00:00</string>
    <string name="version">V1.0</string>
    <string name="love">An app made with Love</string>
    <string name="scrap"> ScrappersTeam.com</string>
    <string name="copy">All Copy Rights Reserved to:  </string>
    <string name="guide_file_name">Write the name of your file</string>
    <string name="file_name">Enter savename</string>
    <string name="cancel">Cancel</string>
    <string name="same_name">Same Name</string>
    <string name="ok">OK</string>
    <string name="tom">Thomas Meshael</string>
    <string name="tom_description">Front-End Development</string>
    <string name="pav">Pavly Gerges</string>
    <string name="pav_description">Back-End Development</string>
    <string name="face">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="space">    </string>
    <string name="color_select">Please Select your Text Color</string>
    <string name="highlight_select">Please Select your Highlight Color</string>
    <string name="search_word">  Highlight Word  </string>
    <string name="search_word_button">Search Word</string>
    <string name="left">L</string>
    <string name="right">R</string>
    <string name="tab">TAB</string>
    <string name="todo_name">ToDo-List</string>
    <string name="checkbox">CheckBox</string>
    <string name="delete">Delete</string>
    <string name="AppTheme">Default</string>
    <string name="Green">Green Snow</string>
    <string name="Darky">Dark</string>
    <string name="cyan">Cyan</string>
    <string name="FingerPrint">FingerPrint</string>
    <string name="Themes">Themes</string>
    <string name="side_bar">Side Bar Menu Button</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_fragment_label">First Fragment</string>

    <!-- Example settings for Notifications -->
    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>

    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="finish">Finish</string>
    <!-- Strings used for fragments for navigation -->
    <string name="high_quality_recording">High Quality Recording</string>
    <string name="low_quality_recording">Low Quality Recording</string>
    <string name="audio_quality">Audio Quality</string>
    <string name="write_a_task">write a task</string>

    <string name="task">Task...</string>
    <string name="add">ADD</string>
    <string name="local_backup">Local Backup</string>
    <string name="bakeup_notes">Back-up notes to /SPRecordings/Backup/</string>
    <string name="restore">Restore</string>
    <string name="back_up">Back-up</string>
    <string name="thomas">Thomas Meshail</string>
    <string name="front_end_development">Front-End Development</string>
    <string name="pavly">  Pavly Gerges  </string>
    <string name="back_end_development">Back-End Development</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="orangy">Titan</string>
    <string name="clear_all">Clear All</string>
    <string name="save">Save</string>
    <string name="quit">Quit</string>
    <string name="dismiss">Dismiss</string>
    <string name="emboss">Emboss</string>
    <string name="blur">Blur</string>
    <string name="normal">Normal</string>
    <string name="deviceNotSupported">Your device doesn\'t support fingerprint authentication</string>
    <string name="enableWarning">Please enable the fingerprint permission</string>
    <string name="noF">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="enableFingerPrintInSettings">Please enable lockScreen security in your device\'s Settings</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
</resources>
