<?xml version="1.0" encoding="utf-8"?>



<!-- The Saving Dialog Box -->
<!-- Used for all Records-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alrt_back"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:padding="10dp"
    android:layout_margin="5dp"
    >
<!--    Order -->

    <TextView
        android:id="@+id/txtView_dialog_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/guide_file_name"
        android:textColor="?attr/abouttextcolor"
        android:textSize="15sp"/>




          <!--         Name of savings-->

    <EditText
        android:id="@+id/nameofsavefile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/file_name"
        android:inputType="textPersonName"
        android:textColor="?attr/abouttextcolor"
        android:textColorHint="?attr/texthintcolor"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginStart="8sp"/>

            <!--       Buttons    -->
            <!--   Material style better than Holo-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">



                <!--  Cancel Button      -->
        <Button
            android:padding="4dp"
            style="@android:style/Widget.Material.Button.Borderless"
            android:id="@+id/CancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="?attr/textcolor"
            android:background="@drawable/box"
            android:layout_margin="5dp"/>


                <!-- Same Name Button   -->

        <Button
            android:padding="4dp"
            style="@android:style/Widget.Material.Button.Borderless"
            android:id="@+id/saveName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_name"
            android:textColor="?attr/textcolor"
            android:background="@drawable/box"
            android:layout_margin="5dp"
            android:visibility="invisible"/>



                <!--   "OK"  button  -->

        <Button
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            style="@android:style/Widget.Material.Button.Borderless"
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="?attr/textcolor"
            android:background="@drawable/box"
            android:layout_margin="5dp"/>
    </LinearLayout>
</LinearLayout>