<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/alrt_items_menu"
    android:paddingTop="14dp"
    android:paddingBottom="14sp"
    android:layout_width="200dp"
    android:layoutDirection="ltr"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="28dp"
    android:layout_gravity="right|end|bottom">


<!--    Settings dialog box -->
<!--    has one Error because it must be linear in linear with different orientation-->
<!--    App pic-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="19dp"
            android:layout_marginLeft="21dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="21dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/write_paper_ink"
            android:background="@drawable/rounded_corners_1"
            android:padding="0dp"/>

        <TextView
            android:paddingTop="8dp"
            android:layout_marginBottom="8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fade_white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/app_name"
            android:gravity="bottom|start"/>
    </LinearLayout>

                  <!--    Settings -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8sp">

        <ImageView
            android:contentDescription="@string/Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings_white_24dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Settings"
            android:textAlignment="gravity"
            android:gravity="center_vertical|start"
            android:textColor="@color/fade_white"
            android:background="@color/transparent"
            android:padding="8sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <!--    Privacy Policy -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8sp">

        <ImageView
            android:contentDescription="@string/privacypolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/privacy_policy_ico"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            />

        <Button
            android:id="@+id/privacypolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacypolicy"
            android:textAlignment="gravity"
            android:gravity="center_vertical|start"
            android:textColor="@color/fade_white"
            android:background="@color/transparent"
            android:padding="8sp"
            android:textStyle="bold"
            />
    </LinearLayout>

                       <!--    About -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8sp">
            <ImageView
                android:contentDescription="@string/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_24dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAlignment="gravity"
        android:gravity="center_vertical|start"
        android:textColor="@color/fade_white"
        android:background="@color/transparent"
        android:padding="8sp"
        android:textStyle="bold" />


        </LinearLayout>
</LinearLayout>